Remove Commit and Redraw In SurfaceLayer::SetFallbackSurfaceId

Fallback SurfaceIds are no longer needed for SurfaceReferences thus
this CL removes the fix for https://crbug.com/827242


Bug: 874138
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I400fb64a69d4395f7463634db87b957ff7005788
Reviewed-on: https://chromium-review.googlesource.com/1174916
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Reviewed-by: Saman Sami <samans@chromium.org>
Commit-Queue: Andre Kaba <akaba@google.com>
Cr-Commit-Position: refs/heads/master@{#583917}
Former-commit-id: 44621cb4dba172f1170f79c6e5fd7f0d86598e71